--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Maior Bolão da Wick</title>
+    <title>Bolão SBDD</title>
     <style>
         body {
             display: flex;
@@ -11,7 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('https://i.postimg.cc/zBpScjDC/Post-para-Instagram-de-investimentos-com-notas-de-100-reais-simples-azul-5.png') no-repeat center center/cover;
+            background: url('https://i.postimg.cc/RZzGsGwY/Post-para-Instagram-de-investimentos-com-notas-de-100-reais-simples-azul-6.png') no-repeat center center/cover;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
