--- a/index.html
+++ b/index.html
@@ -117,6 +117,23 @@
                 font-size: 3em;
             }
         }
+
+        /* Botão para redirecionamento */
+        .redirect-button {
+            display: none;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            font-size: 1.2em;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .redirect-button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
@@ -140,6 +157,7 @@
             </div>
         </div>
         <div class="emoji" id="emoji">🤑💵💶💷💸💰💴</div>
+        <button class="redirect-button" id="redirectButton">Ir para o site</button>
     </div>
 
     <script>
@@ -172,10 +190,10 @@
                 setFinalTimeToZero();
                 triggerCelebration();
 
-                // Redireciona após 45 segundos da animação do confete
+                // Exibe o botão de redirecionamento após a animação
                 setTimeout(() => {
-                    window.location.href = redirectUrl;
-                }, 45000); // 45 segundos após animação
+                    document.getElementById('redirectButton').style.display = 'block';
+                }, 45000); // Aparece após 45 segundos
             }
 
             // Animação do emoji
@@ -214,6 +232,11 @@
             return colors[Math.floor(Math.random() * colors.length)];
         }
 
+        // Redireciona ao clicar no botão
+        document.getElementById('redirectButton').addEventListener('click', () => {
+            window.location.href = redirectUrl;
+        });
+
         // Inicia a animação e a contagem regressiva
         const emojiElement = document.getElementById('emoji');
         const interval = setInterval(updateCountdown, 1000);
@@ -221,3 +244,4 @@
     </script>
 </body>
 </html>
+
