--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
             }
         }
 
-        /* Botão para redirecionamento */
+        /* Estilos para o botão */
         .redirect-button {
-            display: none;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #ff5722;
             color: white;
-            border: none;
+            padding: 15px 30px;
             font-size: 1.2em;
-            cursor: pointer;
+            border: none;
             border-radius: 5px;
+            cursor: pointer;
+            margin-top: 30px;
+            transition: background-color 0.3s ease;
         }
 
         .redirect-button:hover {
-            background-color: #45a049;
+            background-color: #e64a19;
         }
     </style>
 </head>
@@ -157,14 +157,16 @@
             </div>
         </div>
         <div class="emoji" id="emoji">🤑💵💶💷💸💰💴</div>
-        <button class="redirect-button" id="redirectButton">Ir para o site</button>
+
+        <!-- Botão para redirecionar -->
+        <button class="redirect-button" id="redirectButton" style="display:none;">Ir para o site</button>
     </div>
 
     <script>
         // Define a data alvo com a hora exata que você deseja
         const targetDate = new Date();
         targetDate.setFullYear(2024, 11, 5); // Ano, mês (Dezembro), dia (5)
-        targetDate.setHours(16, 15, 0, 0); // Hora local de destino (15:40)
+        targetDate.setHours(16, 20, 0, 0); // Hora local de destino (15:40)
 
         // URL de redirecionamento
         const redirectUrl = "https://dhemmerson.github.io/ponto-a-ponto-bolao-sbdd/";
@@ -190,10 +192,8 @@
                 setFinalTimeToZero();
                 triggerCelebration();
 
-                // Exibe o botão de redirecionamento após a animação
-                setTimeout(() => {
-                    document.getElementById('redirectButton').style.display = 'block';
-                }, 45000); // Aparece após 45 segundos
+                // Exibe o botão de redirecionamento
+                document.getElementById("redirectButton").style.display = "block";
             }
 
             // Animação do emoji
@@ -232,10 +232,10 @@
             return colors[Math.floor(Math.random() * colors.length)];
         }
 
-        // Redireciona ao clicar no botão
-        document.getElementById('redirectButton').addEventListener('click', () => {
+        // Função para redirecionar para o site quando o botão for clicado
+        document.getElementById("redirectButton").onclick = function() {
             window.location.href = redirectUrl;
-        });
+        };
 
         // Inicia a animação e a contagem regressiva
         const emojiElement = document.getElementById('emoji');
