--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="emoji" id="emoji">🤑💵💶💷💸💰💴</div>
 
         <!-- Botão para redirecionar -->
-        <button class="redirect-button" id="redirectButton" style="display:none;">Ir para o site</button>
+        <button class="redirect-button" id="redirectButton" style="display:none;">Site de Pontuação</button>
     </div>
 
     <script>
@@ -206,7 +206,7 @@
             document.getElementById('hours').textContent = "00";
             document.getElementById('minutes').textContent = "00";
             document.getElementById('seconds').textContent = "00";
-            emojiElement.textContent = "BOLÃO🎉"; // Emoji de comemoração
+            emojiElement.textContent = "QUE COMECEM OS JOGOS🎉"; // Emoji de comemoração
         }
 
         // Função para iniciar a animação dos confetes
