--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         /* Estilos para o botão */
         .redirect-button {
-            background-color: #ff5722;
+            background-color: #ffce00;
             color: white;
             padding: 15px 30px;
             font-size: 1.2em;
@@ -165,8 +165,8 @@
     <script>
         // Define a data alvo com a hora exata que você deseja
         const targetDate = new Date();
-        targetDate.setFullYear(2024, 11, 5); // Ano, mês (Dezembro), dia (5)
-        targetDate.setHours(16, 20, 0, 0); // Hora local de destino (15:40)
+        targetDate.setFullYear(2024, 11, 13); // Ano, mês (Dezembro), dia (5)
+        targetDate.setHours(15, 58, 0, 0); // Hora local de destino (15:40)
 
         // URL de redirecionamento
         const redirectUrl = "https://dhemmerson.github.io/ponto-a-ponto-bolao-sbdd/";
