--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             document.getElementById('hours').textContent = "00";
             document.getElementById('minutes').textContent = "00";
             document.getElementById('seconds').textContent = "00";
-            emojiElement.textContent = "QUE COMECEM OS JOGOS🎉"; // Emoji de comemoração
+            emojiElement.textContent = "Agora Vamos Jogar🎉"; // Emoji de comemoração
         }
 
         // Função para iniciar a animação dos confetes
